@@ -53,6 +53,10 @@
 			</comments>
 		</license>
 	</licenses>
+
+
+
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.source>11</java.source>
@@ -60,7 +64,13 @@
 		<project.build.java.target>11</project.build.java.target>
 	</properties>
 
-
+	<pluginRepositories>
+		<pluginRepository>
+			<id>sonatype</id>
+			<name>Sonatype</name>
+			<url>https://oss.sonatype.org/content/groups/public</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -77,7 +87,97 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1-jre</version>
+		</dependency>
+	</dependencies>
 
+	<profiles>
+		
+
+
+		<profile>
+			<id>m2</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+
+			<properties>
+				<checkstyle.plugin>3.1.2</checkstyle.plugin>
+				<checkstyle>8.44</checkstyle>
+			</properties>
+
+
+	<modules>
+		<module>org.imixs.emfcloud.bpmn2.server</module>
+		<module>org.imixs.emfcloud.bpmn2.client</module>
+		<module>org.imixs.emfcloud.bpmn2.web</module>
+	</modules>
+
+			<pluginRepositories>
+				<pluginRepository>
+					<id>sonatype</id>
+					<name>Sonatype</name>
+					<url>https://oss.sonatype.org/content/groups/public</url>
+				</pluginRepository>
+			</pluginRepositories>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<configuration>
+							<argLine>
+								--illegal-access=permit
+							</argLine>
+						</configuration>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.1</version>
+						<configuration>
+							<argLine>
+								--illegal-access=permit
+							</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.22.1</version>
+						<configuration>
+							<argLine>
+								--illegal-access=permit
+							</argLine>
+						</configuration>
+					</plugin>
+				
+				</plugins>
+			</build>
+		</profile>
+
+	
+	</profiles>
 	
 	<modules>
 		<module>org.imixs.emfcloud.bpmn2.server</module>
@@ -85,3 +185,4 @@
 		<module>org.imixs.emfcloud.bpmn2.web</module>
 	</modules>
 </project>
+
